--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ const message = document.getElementById('message').value;
 const fullMessage = `Name: ${name}\nEmail: ${email}\nMessage: ${message}`;
 
 // Prompt user for their preferred communication method
-      const choice = prompt("How would you like to reach Emmanuel /n (email/sms/whatsapp)?").toLowerCase();
+      const choice = prompt("How would you like to reach Emmanuel \n (email/sms/whatsapp)?").toLowerCase();
 
 if (choice === "email") {
 const subject = `New Message from ${name}`;
